<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.maxsmr.ui_testapp.RecyclerTestActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_test"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/recycler_type_select_rg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_test_multi" />

    <RadioGroup
        android:id="@+id/recycler_type_select_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/recycler_btn_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/recycler_type_none_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_test_type_none_radio_text" />

        <RadioButton
            android:id="@+id/recycler_type_single_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_test_type_single_radio_text" />

        <RadioButton
            android:id="@+id/recycler_type_multi_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_test_type_multi_radio_text" />


    </RadioGroup>

    <LinearLayout
        android:id="@+id/recycler_btn_container"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:layout_weight="1"
            android:id="@+id/recycler_type_switch_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_test_type_switch_btn_text" />

        <Button
            android:layout_weight="1"
            android:id="@+id/recycler_current_selected_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/recycler_test_current_selected_btn_text" />

        <Button
            android:layout_weight="1"
            android:id="@+id/recycler_generate_data_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/recycler_test_generate_data_btn_text" />

        <Button
            android:layout_weight="1"
            android:id="@+id/recycler_clear_data_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/recycler_test_clear_data_btn_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>